# rfcat

./: .gitignore  .taplo.toml  pyproject.toml
rflib/: __init__.py  bits.py  ccspecan.py  chipcon_nic.py  chipcon_usb.py  fakedongle_nic.py  intelhex.py  rflib_version.py
rflib/vstruct/: builder.py  primitives.py
tests/: test_api.py
