[project]
name = "rfcat"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "build>=1.2.2.post1",
    "future>=1.0.0",
    "ipython>=8.32.0",
    "numpy>=2.2.3",
    "pyinstaller>=6.12.0",
    "pylint>=3.3.4",
    "pyserial>=3.5",
    "pyusb>=1.3.1",
]

[tool.pylint.basic]
no-docstring-rgx = "__.*__|test[A-Z_].*|_decorator|_wrapper|_.*__.*"

[tool.pylint.reports]
reports = "no"

[tool.pylint.format]
max-line-length="120"

[tool.pylint.message_control]
disable = [
    "cyclic-import",
    "line-too-long",
    "abstract-method",
    "no-member",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "format",
    "refactoring",
    "spelling",
    "design",
    "invalid-name",
    "duplicate-code",
    "fixme",
    "unused-wildcard-import",
    "wrong-import-order",
    "wrong-import-position",
    "ungrouped-imports",
    "multiple-imports",
    "logging-format-interpolation",
    "logging-fstring-interpolation",
    "raise-missing-from",
    "import-outside-toplevel",
    "pointless-string-statement",
    "unspecified-encoding",
    "global-variable-not-assigned",
    "arguments-renamed",
    "protected-access",
    "redefined-builtin",
    "unused-argument",
    "broad-exception-caught",
    "singleton-comparison",
    "super-init-not-called",
    "undefined-variable",
    "possibly-used-before-assignment",
    "redefined-outer-name",
    "attribute-defined-outside-init",
    "unused-variable",
    "bare-except",
    "unnecessary-pass",
    "global-variable-undefined",
    "self-assigning-variable",
    "pointless-statement",
    "import-error",
    "unidiomatic-typecheck",
    "broad-exception-raised",
    "eval-used",
    "wildcard-import",
    "deprecated-method",
    "assignment-from-no-return",
    "useless-object-inheritance",
    "useless-import-alias",
    "dangerous-default-value",
    "too-few-format-args",
    "used-before-assignment",
    "possibly-unused-variable",
    "global-statement",
    "function-redefined",
    "bad-string-format-type",
    "arguments-differ",
    "useless-object-inheritance",
    "reimported",
    "no-self-argument",
    "no-staticmethod-decorator",
    "import-self",
    "no-name-in-module",
    "invalid-length-returned",
    "non-parent-init-called"
    ]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
